--- a/styles/global.css
+++ b/styles/global.css
@@ -20,6 +20,7 @@ body {
   --extra-color: rgba(196, 255, 196, 0.384);
   --extra-bc: rgba(128, 128, 128, 0.164);
   --line-width: 0%;
+  --translate-value: 40px;
 }
 
 button {
@@ -29,3 +30,8 @@ button {
 a {
   text-decoration: none;
 }
+
+.disabled {
+  pointer-events: none;
+}
+
