--- a/styles/todo-app.css
+++ b/styles/todo-app.css
@@ -8,7 +8,7 @@
   color: var(--primary-color);
   background-color: #f5f5f5;
   border-right: 2.5px solid var(--extra-bc);
-  z-index: 1;
+  z-index: 10;
   transition: all 1.5s ease;
 }
 
@@ -36,7 +36,7 @@
   justify-content: space-between;
   gap: 4px;
   align-items: center;
-  padding: 1.5rem 1rem;
+  padding: 1.6rem 0.6rem;
   color: var(--primary-color);
   font-size: 0.8rem;
   cursor: pointer;
@@ -60,11 +60,32 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0.3rem 0.65rem;
+  gap: 6px;
+  padding: 0.2rem 0.6rem;
 }
 
 .navbar .container .filter-tasks h3 {
   display: inline-block;
+}
+
+/* page container styling */
+
+.page-container {
+  min-height: 100vh;
+  position: relative;
+}
+
+/* page overlay styling */
+.page-overlay {
+  background-color: #adadad;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  opacity: 0.4;
+  transition: all 1s ease;
 }
 
 /* header styling */
@@ -95,20 +116,16 @@
   border-radius: 4px;
 }
 
-.header .logo {
+.header .logo .go-home {
   font-size: 1.4rem;
   font-weight: bold;
+  color: var(--secondary-color);
   display: flex;
   align-items: flex-end;
-  color: var(--secondary-color);
 }
 
-.header .logo span {
+.header .logo .go-home span {
   color: var(--primary-color)
-}
-
-.header .logo img {
-  fill: var(--primary-color)
 }
 
 .header .logo span .done {
@@ -248,5 +265,25 @@
 
   .navbar:hover .container .filter-tasks img {
     order: 1;
+  }
+
+  .navbar .container .filter-tasks {
+    padding: 0.2rem 0.8rem;
+  }
+
+  .navbar .container ul li {
+    padding: 1.6rem 0.8rem;
+  }
+
+  .navbar .container img {
+    width: 24px;
+  }
+  
+  .header .logo .go-home {
+    pointer-events: auto;
+  }
+
+  .page-overlay {
+    display: none;
   }
 }
