--- a/styles/todo-app.css
+++ b/styles/todo-app.css
@@ -86,6 +86,7 @@
   z-index: 1;
   opacity: 0.4;
   transition: all 1s ease;
+  transition-delay: 0.5s;
 }
 
 /* header styling */
@@ -96,7 +97,6 @@
   align-items: center;
   border-bottom: 2px solid var(--extra-bc);
   padding: 0.5rem 0.5rem;
-  /* position: fixed; */
   width: 100%;
   top: 0;
   left: 0;
