--- a/styles/todo-app.css
+++ b/styles/todo-app.css
@@ -169,11 +169,15 @@
   gap: 12px;
 }
 
-.main .container .tasks-container .form .task-adder .add-task {
+.main .container .tasks-container .form .task-adder .add-task-btn {
   border: none;
   background-color: #f5f5f5;
   color: var(--primary-color);
   font-size: 1.2rem;
+}
+
+.main .container .tasks-container .form .task-adder .add-task-btn i {
+  pointer-events: none;
 }
 
 .main .container .tasks-container .form .task-adder input {
@@ -184,12 +188,16 @@
   font-size: 1.2rem;
 }
 
+.main .container .tasks-container .form .task-adder input::placeholder {
+  color: #d5d5d5;
+}
+
 .main .container .tasks-container .form .task-adder input:focus {
   border: none;
   outline: none;
 }
 
-.main .container .tasks-container .task {
+.main .container .tasks-container .tasks-list .task {
   margin-top: 0.5rem;
   border-bottom: 1px solid #e4e4e4;
   font-size: 1rem;
@@ -200,23 +208,23 @@
   transition: all 0.5s ease;
 }
 
-.main .container .tasks-container .task .task-controls,
-.main .container .tasks-container .task .task-content {
+.main .container .tasks-container .tasks-list .task .task-controls,
+.main .container .tasks-container .tasks-list .task .task-content {
   display: flex;
   gap: 0.5rem;
   align-items: flex-start;
 }
 
-.main .container .tasks-container .task .task-content .task-text {
+.main .container .tasks-container .tasks-list .task .task-content .task-text {
   flex-basis: 95%;
   word-break: break-all;
 }
 
-.main .container .tasks-container .task .task-controls > * {
+.main .container .tasks-container .tasks-list .task .task-controls > * {
   cursor: pointer;
 }
 
-.main .container .tasks-container .task .status {
+.main .container .tasks-container .tasks-list .task .status {
   width: 1.1rem;
   height: 1.1rem;
   border-radius: 50%;
@@ -229,7 +237,7 @@
   font-size: 0.5rem;
 }
 
-.main .container .tasks-container .task:hover {
+.main .container .tasks-container .tasks-list .task:hover {
   transform: translateY(-2px);
   box-shadow: 0 2px var(--secondary-color);
 }
