create delete task functionality relates #23

--- a/styles/todo-app.css
+++ b/styles/todo-app.css
@@ -208,6 +208,10 @@
   transition: all 0.5s ease;
 }
 
+.main .container .tasks-container .tasks-list .task .task-controls i {
+  pointer-events: none;
+}
+
 .main .container .tasks-container .tasks-list .task .task-controls,
 .main .container .tasks-container .tasks-list .task .task-content {
   display: flex;
