--- a/styles/todo-app.css
+++ b/styles/todo-app.css
@@ -208,6 +208,20 @@
   transition: all 0.5s ease;
 }
 
+.main .container .tasks-container .tasks-list .task .task-content {
+  flex-grow: 1;
+}
+
+.main .container .tasks-container .tasks-list .task .task-content .task-text {
+  border: none;
+  outline: none;
+}
+
+.main .container .tasks-container .tasks-list .task .task-content .task-text {
+  flex-basis: 97%;
+  word-break: break-all;
+}
+
 .main .container .tasks-container .tasks-list .task .task-controls i {
   pointer-events: none;
 }
@@ -217,11 +231,6 @@
   display: flex;
   gap: 0.5rem;
   align-items: flex-start;
-}
-
-.main .container .tasks-container .tasks-list .task .task-content .task-text {
-  flex-basis: 95%;
-  word-break: break-all;
 }
 
 .main .container .tasks-container .tasks-list .task .task-controls > * {
@@ -252,13 +261,17 @@
   .navbar {
     left: 0;
     width: 58px;
+    transition: width 1.2s ease;
   }
 
   .navbar .container li .item-name,
   .navbar .container li .count,
   .navbar .container .filter-tasks h3{
     opacity: 0;
-    transition: 0.2s;
+  }
+
+  .navbar .container li .item {
+    flex: 1 1 100%;
   }
 
   .navbar .container .filter-tasks img {
@@ -273,10 +286,13 @@
   .navbar:hover .container li .count,
   .navbar:hover .container .filter-tasks h3 {
     opacity: 1;
+    transition: 0.5s;
+    transition-delay: 1s;
   }
 
   .navbar:hover .container .filter-tasks img {
     order: 1;
+    transition-delay: 1s;
   }
 
   .navbar .container .filter-tasks {
