fix disable edit button to be non active on marking a task complete

--- a/styles/global.css
+++ b/styles/global.css
@@ -31,7 +31,12 @@ a {
   text-decoration: none;
 }
 
-.disabled {
+.disabled, 
+.non-active {
   pointer-events: none;
+}
+
+.non-active {
+  opacity: 0.4;
 }
 
