--- a/styles/todo-app.css
+++ b/styles/todo-app.css
@@ -212,9 +212,8 @@
   flex-grow: 1;
 }
 
-.main .container .tasks-container .tasks-list .task .task-content .task-text {
-  border: none;
-  outline: none;
+.main .container .tasks-container .tasks-list .task .task-content .status,
+.main .container .tasks-container .tasks-list .task .task-controls .edit {
   transition: all 1s ease;
 }
 
@@ -226,6 +225,9 @@
 .main .container .tasks-container .tasks-list .task .task-content .task-text {
   flex-basis: 96%;
   word-break: break-all;
+  border: none;
+  outline: none;
+  transition: all 1s ease;
 }
 
 .main .container .tasks-container .tasks-list .task .task-controls i,
@@ -238,7 +240,7 @@
   background-color: #e4e4e4;
   border-radius: 40px;
   padding: 3px 7px;
-  transition: all 0.5s ease;
+  transition: all 0.6s ease;
 }
 
 .main .container .tasks-container .tasks-list .task .task-controls .save:hover {
