--- a/styles/global.css
+++ b/styles/global.css
@@ -7,20 +7,30 @@
   background-color:rgba(128, 128, 128, 0.15);
 }
 
-body {
-  margin: 0;
-  overflow-x: hidden;
-  margin: 0;
-}
-
 :root {
   --body-bc: #fff;
+  --text-color: rgb(1, 49, 1);
   --primary-color: rgb(1, 49, 1);
   --secondary-color: #37e288;
   --extra-color: rgba(196, 255, 196, 0.384);
   --extra-bc: rgba(128, 128, 128, 0.164);
+  
   --line-width: 0%;
   --translate-value: 40px;
+}
+
+body {
+  background-color: var(--body-bc);
+  margin: 0;
+  overflow-x: hidden;
+  margin: 0;
+  transition: 0.4s ease-in-out;
+}
+
+body.dark-mode {
+  --body-bc: rgb(22, 37, 51);
+  --text-color: rgb(234, 235, 236);
+  
 }
 
 button {
@@ -40,3 +50,27 @@ a {
   opacity: 0.4;
 }
 
+.header .mode {
+  margin-left: 0.8rem;
+}
+
+/* toggle page mode button styling */
+
+.header .mode button {
+  background-color: var(--extra-color);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  outline: none;
+  border-radius: 50%;
+  width: 41px;
+  height: 41px;  
+}
+
+.header .mode button i {
+  font-size: 1.4rem;
+  font-weight: bold;
+  color: var(--secondary-color);
+  pointer-events: none;
+}
